# litcal-roman

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
src/litcal_roman/: __init__.py  calendar.py  models.py  sanctorale.py  temporale.py
src/litcal_roman/data/: universal.yaml  us.yaml
tests/: test_calendar.py  test_romcal_fixtures.py  test_sanctorale.py  test_temporale.py
